--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <li><a href="#bottom">Go To Bottom</a></li>
 </ul>
 <ol id="objects">
-<li><a target="_self" href="game-1.html">Stazzy City---12/31/24</a></li>
+<li><a target="_self" href="game-1.html">Stazzy City---12/31/2024</a></li>
+<li><a target="_self" href="game-2.html">Ancient Acropolis---1/3/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
