--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <li><a target="_self" href="game-1.html">Stazzy City---12/31/2024</a></li>
 <li><a target="_self" href="game-2.html">Ancient Acropolis---1/3/2025</a></li>
 <li><a target="_self" href="game-3.html">Pancetta's Pizza---1/7/2025</a></li>
+<li><a target="_self" href="game-4.html">Fallow Fortress---1/14/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
