--- a/map.html
+++ b/map.html
@@ -17,7 +17,7 @@
 <td><p><a target="_self" href="game-3.html"><img src="Level Icon.png" width="64px" height="64px"></a>Pancetta's Pizza</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Koopa The Quick's Territory</p></td>
+<td><p><a target="_self" href="game-4.html"><img src="Level Icon.png" width="64px" height="64px"></a>Fallow Fortress</p></td>
 <td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Big Bully's Territory</p></td>  
 <td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Chill Bully's Territory</p></td>  
 </tr>
