--- a/map.html
+++ b/map.html
@@ -10,7 +10,7 @@
 <body onload="randombg()" id="random">
 <h1>Bumper 64</h1>
 <hr>
-<table width="100%" height="100%">
+<table>
 <tr>
 <td><p><a target="_self" href="game-1.html"><img src="Level Icon.png" width="64px" height="64px"></a>Stazzy City</p></td>
 <td><p><a target="_self" href="game-2.html"><img src="Level Icon.png" width="64px" height="64px"></a>Ancient Acropolis</p></td>
