--- a/game-3.html
+++ b/game-3.html
@@ -12,7 +12,7 @@
 <hr>
 <img src="S3.png" width="100%" height="100%">
 <p><a target="_self" href="Pancetta's Pizza.zip">Download Game</a></p>
-<p><a target="_self" href="map.html">Look At World Map</a></p>
+<p><a target="_self" href="#">Look At World Map</a></p>
 <hr>
 <p><a target="_blank" href="Pancetta's Pizza.zip">Open Game In New Tab</a></p>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
