--- a/game-4.html
+++ b/game-4.html
@@ -12,7 +12,7 @@
 <hr>
 <img src="S4.png" width="100%" height="100%">
 <p><a target="_self" href="Fallow Fortress.zip">Download Game</a></p>
-<p><a target="_self" href="#">Look At World Map</a></p>
+<p><a target="_self" href="https://stazzy-map.pages.dev/">Look At World Map</a></p>
 <hr>
 <p><a target="_blank" href="Fallow Fortress.zip">Open Game In New Tab</a></p>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
