--- a/game-2.html
+++ b/game-2.html
@@ -12,7 +12,7 @@
 <hr>
 <img src="S2.png" width="100%" height="100%">
 <p><a target="_self" href="Ancient Acropolis.zip">Download Game</a></p>
-<p><a target="_self" href="https://stazzy-map.pages.dev/">Look At World Map</a></p>
+<p><a target="_self" href="map-1.html">Look At World Map</a></p>
 <hr>
 <p><a target="_blank" href="Ancient Acropolis.zip">Open Game In New Tab</a></p>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
