--- a/map-1.html
+++ b/map-1.html
@@ -28,6 +28,7 @@
 </table>
 <hr>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
+<p><a target="_self" href="https://stazzy-station.pages.dev/">Home</a></p>
 <script src="Background.js"></script>
 </body>
 </html>
