--- a/map-1.html
+++ b/map-1.html
@@ -18,7 +18,7 @@
 </tr>
 <tr>
 <td><p><a target="_self" href="game-4.html"><img src="Level Icon.png" width="64px" height="64px"></a>Fallow Fortress</p></td>
-<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Big Bully's Territory</p></td>  
+<td><p><a target="_self" href="game-5.html"><img src="Level Icon.png" width="64px" height="64px"></a>Molten Mine</p></td>  
 <td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Chill Bully's Territory</p></td>  
 </tr>
 <tr>
