--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <li><a target="_self" href="game-3.html">Pancetta's Pizza---1/7/2025</a></li>
 <li><a target="_self" href="game-4.html">Fallow Fortress---1/14/2025</a></li>
 <li><a target="_self" href="game-5.html">Molten Mine---2/2/2025</a></li>
+<li><a target="_self" href="game-6.html">Arctic Abode---2/6/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
