--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <li><a target="_self" href="game-4.html">Fallow Fortress---1/14/2025</a></li>
 <li><a target="_self" href="game-5.html">Molten Mine---2/2/2025</a></li>
 <li><a target="_self" href="game-6.html">Arctic Abode---2/6/2025</a></li>
+<li><a target="_self" href="game-7.html">Wayward Workshop---2/8/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
