--- a/map-1.html
+++ b/map-1.html
@@ -22,7 +22,7 @@
 <td><p><a target="_self" href="game-6.html"><img src="Level Icon.png" width="64px" height="64px"></a>Arctic Abode</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Wiggler's Territory</p></td>
+<td><p><a target="_self" href="game-7.html"><img src="Level Icon.png" width="64px" height="64px"></a>Wayward Workshop</p></td>
 <td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Bowser's Territory</p></td>
 </tr>
 </table>
