EAT FREEDOM, FAGGOT! I FUCKING LOVE AMERICA!

--- a/game-7.html
+++ b/game-7.html
@@ -8,6 +8,7 @@
 <title>Wayward Workshop</title>
 </head>
 <body onload="randombg()" id="random">
+<div id="USA">
 <h1>Wayward Workshop</h1>
 <hr>
 <img src="S7.png" width="100%" height="100%">
@@ -17,5 +18,6 @@
 <p><a target="_blank" href="Wayward Workshop.zip">Open Game In New Tab</a></p>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
 <script src="Background.js"></script>
+</div>
 </body>
 </html>
