--- a/map-1.html
+++ b/map-1.html
@@ -8,6 +8,7 @@
 <title>Bumper 64</title>
 </head>
 <body onload="randombg()" id="random">
+<div id="USA">
 <h1>Bumper 64</h1>
 <hr>
 <table>
@@ -30,5 +31,6 @@
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
 <p><a target="_self" href="https://stazzy-station.pages.dev/">Home</a></p>
 <script src="Background.js"></script>
+</div>
 </body>
 </html>
