--- a/game-6.html
+++ b/game-6.html
@@ -8,6 +8,7 @@
 <title>Arctic Abode</title>
 </head>
 <body onload="randombg()" id="random">
+<div id="USA">
 <h1>Arctic Abode</h1>
 <hr>
 <img src="S6.png" width="100%" height="100%">
@@ -17,5 +18,6 @@
 <p><a target="_blank" href="Arctic Abode.zip">Open Game In New Tab</a></p>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
 <script src="Background.js"></script>
+</div>
 </body>
 </html>
