--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <title>Games</title>
 </head>
 <body onload="randombg()" id="random">
+<div id="USA">
 <h1>Games</h1>
 <hr>
 <p id="time"></p>
@@ -35,5 +36,6 @@
 <script src="Time.js"></script>
 <script src="Search.js"></script>
 <script src="Random.js"></script>
+</div>
 </body>
 </html>
