--- a/map-1.html
+++ b/map-1.html
@@ -27,6 +27,11 @@
 <td><p><a target="_self" href="game-8.html"><img src="Level Icon.png" width="64px" height="64px"></a>Cubic Crisis</p></td>
 <td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>???</p></td>
 </tr>
+<tr>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>???</p></td>
+</tr>
 </table>
 <hr>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
