--- a/map-1.html
+++ b/map-1.html
@@ -25,7 +25,7 @@
 <tr>
 <td><p><a target="_self" href="game-7.html"><img src="Level Icon.png" width="64px" height="64px"></a>Wayward Workshop</p></td>
 <td><p><a target="_self" href="game-8.html"><img src="Level Icon.png" width="64px" height="64px"></a>Cubic Crisis</p></td>
-<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="game-9.html"><img src="Level Icon.png" width="64px" height="64px"></a>Peaceful Palace</p></td>
 </tr>
 <tr>
 <td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>???</p></td>
