--- a/map-1.html
+++ b/map-1.html
@@ -28,7 +28,7 @@
 <td><p><a target="_self" href="game-9.html"><img src="Level Icon.png" width="64px" height="64px"></a>Peaceful Palace</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="game-10.html"><img src="Level Icon.png" width="64px" height="64px"></a>Pacific Plant</p></td>
 <td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>???</p></td>
 <td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>???</p></td>
 </tr>
