--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <li><a target="_self" href="game-8.html">Cubic Crisis---2/15/2025</a></li>
 <li><a target="_self" href="game-9.html">Peaceful Palace---2/20/2025</a></li>
 <li><a target="_self" href="game-10.html">Pacific Plant---2/23/2025</a></li>
+<li><a target="_self" href="game-11.html">Searing Sahara---2/24/2025</a></li>
+<li><a target="_self" href="game-12.html">Cathode Castle---2/24/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
