--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <li><a target="_self" href="game-11.html">Searing Sahara---2/24/2025</a></li>
 <li><a target="_self" href="game-12.html">Cathode Castle---2/24/2025</a></li>
 <li><a target="_self" href="game-13.html">This Is Not Deltarune---2/24/2025</a></li>
+<li><a target="_self" href="game-14.html">Hide & Seek---2/27/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
