--- a/game-13.html
+++ b/game-13.html
@@ -13,6 +13,7 @@
 <hr>
 <img src="S13.png" width="100%" height="100%">
 <p><a target="_self" href="This Is Not Deltarune.zip">Download Game</a></p>
+<p><a target="_self" href="map-1.html">Look At World Map</a></p>
 <hr>
 <p><a target="_blank" href="This Is Not Deltarune.zip">Open Game In New Tab</a></p>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
