--- a/game-14.html
+++ b/game-14.html
@@ -13,6 +13,7 @@
 <hr>
 <img src="S14.png" width="100%" height="100%">
 <p><a target="_self" href="Hide & Seek.zip">Download Game</a></p>
+<p><a target="_self" href="map-1.html">Look At World Map</a></p>
 <hr>
 <p><a target="_blank" href="Hide & Seek.zip">Open Game In New Tab</a></p>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
