--- a/map-1.html
+++ b/map-1.html
@@ -5,11 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="icon.png">
 <link rel="stylesheet" href="map.css">
-<title>World Of Bumper 64</title>
+<title>Bumper 64: Tungol Alpha</title>
 </head>
 <body onload="randombg()" id="random">
 <div id="USA">
-<h1>World Of Bumper 64</h1>
+<h1>Bumper 64: Tungol Alpha</h1>
 <hr>
 <table>
 <tr>
@@ -32,8 +32,19 @@
 <td><p><a target="_self" href="game-11.html"><img src="Level Icon.png" width="64px" height="64px"></a>Searing Sahara</p></td>
 <td><p><a target="_self" href="game-12.html"><img src="Level Icon.png" width="64px" height="64px"></a>Cathode Castle</p></td>
 </tr>
+<tr>
+<td><p><a target="_self" href="game-13.html"><img src="Level Icon.png" width="64px" height="64px"></a>This Is Not Deltarune</p></td>
+<td><p><a target="_self" href="game-14.html"><img src="Level Icon.png" width="64px" height="64px"></a>Hide & Seek</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 15</p></td>
+</tr>
+<tr>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 16</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 17</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 18</p></td>
+</tr>
 </table>
-<!--<p><a target="_self" href="#">Go On A World Tour</a></p>-->
+<p><a target="_self" href="map-2.html">Go To Tungol Beta</a></p>
+<!--<p><a target="_self" href="#">Launch A Campaign</a></p>-->
 <hr>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
 <p><a target="_self" href="https://stazzy-station.pages.dev/">Home</a></p>
