--- a/map-2.html
+++ b/map-2.html
@@ -11,38 +11,40 @@
 <div id="USA">
 <h1>Bumper 64: Tungol Beta</h1>
 <hr>
-<table style="filter: invert(100%);">
+<div id="invert">
+<table>
 <tr>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 19</p></td>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 20</p></td>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 21</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 19</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 20</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 21</p></td>
 </tr>
 <tr>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 22</p></td>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 23</p></td>  
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 24</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 22</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 23</p></td>  
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 24</p></td>
 </tr>
 <tr>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 25</p></td>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 26</p></td>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 27</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 25</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 26</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 27</p></td>
 </tr>
 <tr>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 28</p></td>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 29</p></td>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 30</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 28</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 29</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 30</p></td>
 </tr>
 <tr>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 31</p></td>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 32</p></td>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 33</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 31</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 32</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 33</p></td>
 </tr>
 <tr>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 34</p></td>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 35</p></td>
-<td style="filter: invert(100%);"><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 36</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 34</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 35</p></td>
+<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 36</p></td>
 </tr>
 </table>
+</div>
 <p><a target="_self" href="map-1.html">Go To Tungol Alpha</a></p>
 <!--<p><a target="_self" href="#">Launch A Campaign</a></p>-->
 <hr>
