Change How Backgrounds Work For Maps

--- a/map-1.html
+++ b/map-1.html
@@ -11,6 +11,7 @@
 <div id="USA">
 <h1>Bumper 64: Tungol Alpha</h1>
 <hr>
+<div id="map1">
 <table>
 <tr>
 <td><p><a target="_self" href="game-1.html"><img src="Level Icon.png" width="64px" height="64px"></a>Stazzy City</p></td>
@@ -43,6 +44,7 @@
 <td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 18</p></td>
 </tr>
 </table>
+</div>
 <p><a target="_self" href="map-2.html">Go To Tungol Beta</a></p>
 <!--<p><a target="_self" href="#">Launch A Campaign</a></p>-->
 <hr>
