--- a/map-2.html
+++ b/map-2.html
@@ -11,7 +11,7 @@
 <div id="USA">
 <h1>Bumper 64: Tungol Beta</h1>
 <hr>
-<div id="invert">
+<div id="map2">
 <table>
 <tr>
 <td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 19</p></td>
