--- a/map-1.html
+++ b/map-1.html
@@ -5,11 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="icon.png">
 <link rel="stylesheet" href="map.css">
-<title>Bumper 64: Tungol Alpha</title>
+<title>Bumper 64</title>
 </head>
 <body onload="randombg()" id="random">
 <div id="USA">
-<h1>Bumper 64: Tungol Alpha</h1>
+<h1>Bumper 64</h1>
 <hr>
 <div id="map1">
 <table>
