Here's A Better Idea...

--- a/map-1.html
+++ b/map-1.html
@@ -5,38 +5,38 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="icon.png">
 <link rel="stylesheet" href="map.css">
-<title>Bumper 64</title>
+<title>B64 World 1</title>
 </head>
 <body onload="randombg()" id="random">
 <div id="USA">
-<h1>Bumper 64</h1>
+<h1>B64 World 1</h1>
 <hr>
 <div id="map1">
 <table>
 <tr>
-<td><p><a target="_self" href="game-1.html"><img src="Level Icon.png" width="64px" height="64px"></a>Stazzy City</p></td>
-<td><p><a target="_self" href="game-2.html"><img src="Level Icon.png" width="64px" height="64px"></a>Ancient Acropolis</p></td>
-<td><p><a target="_self" href="game-3.html"><img src="Level Icon.png" width="64px" height="64px"></a>Pancetta's Pizza</p></td>
+<td><p><a target="_self" href="game-1.html"><img src="Open.png" width="64px" height="64px"></a>Stazzy City</p></td>
+<td><p><a target="_self" href="game-2.html"><img src="Open.png" width="64px" height="64px"></a>Ancient Acropolis</p></td>
+<td><p><a target="_self" href="game-3.html"><img src="Open.png" width="64px" height="64px"></a>Pancetta's Pizza</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="game-4.html"><img src="Level Icon.png" width="64px" height="64px"></a>Fallow Fortress</p></td>
-<td><p><a target="_self" href="game-5.html"><img src="Level Icon.png" width="64px" height="64px"></a>Molten Mine</p></td>  
-<td><p><a target="_self" href="game-6.html"><img src="Level Icon.png" width="64px" height="64px"></a>Arctic Abode</p></td>
+<td><p><a target="_self" href="game-4.html"><img src="Open.png" width="64px" height="64px"></a>Fallow Fortress</p></td>
+<td><p><a target="_self" href="game-5.html"><img src="Open.png" width="64px" height="64px"></a>Molten Mine</p></td>  
+<td><p><a target="_self" href="game-6.html"><img src="Open.png" width="64px" height="64px"></a>Arctic Abode</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="game-7.html"><img src="Level Icon.png" width="64px" height="64px"></a>Wayward Workshop</p></td>
-<td><p><a target="_self" href="game-8.html"><img src="Level Icon.png" width="64px" height="64px"></a>Cubic Crisis</p></td>
-<td><p><a target="_self" href="game-9.html"><img src="Level Icon.png" width="64px" height="64px"></a>Peaceful Palace</p></td>
+<td><p><a target="_self" href="game-7.html"><img src="Open.png" width="64px" height="64px"></a>Wayward Workshop</p></td>
+<td><p><a target="_self" href="game-8.html"><img src="Open.png" width="64px" height="64px"></a>Cubic Crisis</p></td>
+<td><p><a target="_self" href="game-9.html"><img src="Open.png" width="64px" height="64px"></a>Peaceful Palace</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="game-10.html"><img src="Level Icon.png" width="64px" height="64px"></a>Pacific Plant</p></td>
-<td><p><a target="_self" href="game-11.html"><img src="Level Icon.png" width="64px" height="64px"></a>Searing Sahara</p></td>
-<td><p><a target="_self" href="game-12.html"><img src="Level Icon.png" width="64px" height="64px"></a>Cathode Castle</p></td>
+<td><p><a target="_self" href="game-10.html"><img src="Open.png" width="64px" height="64px"></a>Pacific Plant</p></td>
+<td><p><a target="_self" href="game-11.html"><img src="Open.png" width="64px" height="64px"></a>Searing Sahara</p></td>
+<td><p><a target="_self" href="game-12.html"><img src="Open.png" width="64px" height="64px"></a>Cathode Castle</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="game-13.html"><img src="Level Icon.png" width="64px" height="64px"></a>This Is Not Deltarune</p></td>
-<td><p><a target="_self" href="game-14.html"><img src="Level Icon.png" width="64px" height="64px"></a>Hide & Seek</p></td>
-<td><p><a target="_self" href="#"><img src="Level Icon 2.png" width="64px" height="64px"></a>Area 15</p></td>
+<td><p><a target="_self" href="game-13.html"><img src="Open.png" width="64px" height="64px"></a>This Is Not Deltarune</p></td>
+<td><p><a target="_self" href="game-14.html"><img src="Open.png" width="64px" height="64px"></a>Hide & Seek</p></td>
+<td><p><a target="_self" href="map-2.html"><img src="Warp.png" width="64px" height="64px"></a>World 2</p></td>
 </tr>
 </table>
 </div>
