--- a/map-2.html
+++ b/map-2.html
@@ -5,14 +5,45 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="icon.png">
 <link rel="stylesheet" href="map.css">
-<meta http-equiv="refresh" content="0; url=https://stazzy-games.pages.dev/map-1">
-<title>This Map Doesn't Exist</title>
+<title>B64 World 2</title>
 </head>
 <body onload="randombg()" id="random">
 <div id="USA">
-<h1>This Map Doesn't Exist</h1>
+<h1>B64 World 2</h1>
 <hr>
-<p>Redirecting...</p>
+<div id="map2">
+<table>
+<tr>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+</tr>
+<tr>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>  
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+</tr>
+<tr>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+</tr>
+<tr>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+</tr>
+<tr>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+</tr>
+</table>
+</div>
+<hr>
+<p><a target="_self" href="index.html">Return To The Games Page</a></p>
+<p><a target="_self" href="https://stazzy-station.pages.dev/">Home</a></p>
 <script src="Background.js"></script>
+</div>
 </body>
 </html>
