--- a/map-2.html
+++ b/map-2.html
@@ -5,17 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="icon.png">
 <link rel="stylesheet" href="map.css">
-<title>B64 World 2</title>
+<title>Bumper 64 W-2</title>
 </head>
 <body onload="randombg()" id="random">
 <div id="USA">
-<h1>B64 World 2</h1>
+<h1>Bumper 64 W-2</h1>
 <hr>
 <div id="map2">
 <table>
 <tr>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="map-1.html"><img src="Return.png" width="64px" height="64px"></a>World 1</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>New Level Soon...</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
 </tr>
 <tr>
