--- a/map-2.html
+++ b/map-2.html
@@ -15,28 +15,28 @@
 <table>
 <tr>
 <td><p><a target="_self" href="map-1.html"><img src="Return.png" width="64px" height="64px"></a>World 1</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>New Level Soon...</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-1</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-2</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>  
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-3</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-4</p></td>  
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-5</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-6</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-7</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-8</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-9</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-10</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-11</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>???</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-12</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Level 2-13</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>World 3</p></td>
 </tr>
 </table>
 </div>
