Last Level & Bumper 64 Release

--- a/map-1.html
+++ b/map-1.html
@@ -5,11 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="icon.png">
 <link rel="stylesheet" href="map.css">
-<title>Bumper 64 W-1</title>
+<title>World Of Bumper 64</title>
 </head>
 <body onload="randombg()" id="random">
 <div id="USA">
-<h1>Bumper 64 W-1</h1>
+<h1>World Of Bumper 64</h1>
 <hr>
 <div id="map1">
 <table>
@@ -36,7 +36,7 @@
 <tr>
 <td><p><a target="_self" href="game-13.html"><img src="Open.png" width="64px" height="64px"></a>This Is Not Deltarune</p></td>
 <td><p><a target="_self" href="game-14.html"><img src="Open.png" width="64px" height="64px"></a>Hide & Seek</p></td>
-<td><p><a target="_self" href="map-2.html"><img src="Warp.png" width="64px" height="64px"></a>World 2</p></td>
+<td><p><a target="_self" href="game-15.html"><img src="Open.png" width="64px" height="64px"></a>Scallywag Skyline</p></td>
 </tr>
 </table>
 </div>
