Ikemen GO Build Release

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <li><a target="_self" href="game-14.html">Hide & Seek---2/27/2025</a></li>
 <li><a target="_self" href="game-15.html">Scallywag Skyline---3/14/2025</a></li>
 <li><a target="_self" href="game-16.html">Bumper 64---3/14/2025</a></li>
+<li><a target="_self" href="game-17.html">Stazzy's Ikemen GO Build---4/16/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
