Pokey Is Less Generic

--- a/map-2.html
+++ b/map-2.html
@@ -30,7 +30,7 @@
 </tr>
 <tr>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Big Bully</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Desert</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Pokey</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Koopa Shell</p></td>
 </tr>
 <tr>
