--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <li><a target="_self" href="game-16.html">Bumper 64---3/14/2025</a></li>
 <li><a target="_self" href="game-17.html">Stazzy's Ikemen GO Build---4/16/2025</a></li>
 <li><a target="_self" href="game-18.html">Classic Castle---4/23/2025</a></li>
+<li><a target="_self" href="game-19.html">Clever Clock---4/26/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
