--- a/map-2.html
+++ b/map-2.html
@@ -15,11 +15,11 @@
 <table>
 <tr>
 <td><p><a target="_self" href="game-18.html"><img src="Open.png" width="64px" height="64px"></a>Classic Castle</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Koopa The Quick</p></td>
+<td><p><a target="_self" href="game-19.html"><img src="Open.png" width="64px" height="64px"></a>Clever Clock</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Wing Cap</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>King Whomp</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Koopa The Quick</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Big Boo</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Vanish Cap</p></td>
 </tr>
