--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <li><a target="_self" href="game-17.html">Stazzy's Ikemen GO Build---4/16/2025</a></li>
 <li><a target="_self" href="game-18.html">Classic Castle---4/23/2025</a></li>
 <li><a target="_self" href="game-19.html">Clever Clock---4/26/2025</a></li>
+<li><a target="_self" href="game-20.html">Wild Wing Way---4/28/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
