--- a/map-2.html
+++ b/map-2.html
@@ -19,7 +19,7 @@
 <td><p><a target="_self" href="game-20.html"><img src="Open.png" width="64px" height="64px"></a>Wild Wing Way</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Koopa The Quick</p></td>
+<td><p><a target="_self" href="game-21.html"><img src="Open.png" width="64px" height="64px"></a>Rising Raceway</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Big Boo</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Vanish Cap</p></td>
 </tr>
