--- a/map-2.html
+++ b/map-2.html
@@ -20,11 +20,11 @@
 </tr>
 <tr>
 <td><p><a target="_self" href="game-21.html"><img src="Open.png" width="64px" height="64px"></a>Rising Raceway</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Big Boo</p></td>
+<td><p><a target="_self" href="game-22.html"><img src="Open.png" width="64px" height="64px"></a>Vacant Villa</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Vanish Cap</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Mr. I</p></td>
+<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Motos</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Bowser 1</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Metal Cap</p></td>
 </tr>
