--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <li><a target="_self" href="game-20.html">Wild Wing Way---4/28/2025</a></li>
 <li><a target="_self" href="game-21.html">Rising Raceway---5/6/2025</a></li>
 <li><a target="_self" href="game-22.html">Vacant Villa---5/10/2025</a></li>
+<li><a target="_self" href="game-23.html">Cloud Carnival---5/11/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
