--- a/map-2.html
+++ b/map-2.html
@@ -24,7 +24,7 @@
 <td><p><a target="_self" href="game-23.html"><img src="Open.png" width="64px" height="64px"></a>Cloud Carnival</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Vanish Cap</p></td>
+<td><p><a target="_self" href="game-24.html"><img src="Open.png" width="64px" height="64px"></a>Vanish Valley</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Bowser 1</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Metal Cap</p></td>
 </tr>
