--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <li><a target="_self" href="game-22.html">Vacant Villa---5/10/2025</a></li>
 <li><a target="_self" href="game-23.html">Cloud Carnival---5/11/2025</a></li>
 <li><a target="_self" href="game-24.html">Vanish Valley---5/21/2025</a></li>
+<li><a target="_self" href="game-25.html">Shivery Showdown---5/27/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
