Medieval Metal Mario

--- a/map-2.html
+++ b/map-2.html
@@ -26,7 +26,7 @@
 <tr>
 <td><p><a target="_self" href="game-24.html"><img src="Open.png" width="64px" height="64px"></a>Vanish Valley</p></td>
 <td><p><a target="_self" href="game-25.html"><img src="Open.png" width="64px" height="64px"></a>Shivery Showdown</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Metal Cap</p></td>
+<td><p><a target="_self" href="game-26.html"><img src="Open.png" width="64px" height="64px"></a>Metal Manor</p></td>
 </tr>
 <tr>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Big Bully</p></td>
