Digital Art Is Going Slow. Here's A Bone.

--- a/map-2.html
+++ b/map-2.html
@@ -29,8 +29,8 @@
 <td><p><a target="_self" href="game-26.html"><img src="Open.png" width="64px" height="64px"></a>Metal Manor</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Big Bully</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Pokey</p></td>
+<td><p><a target="_self" href="game-27.html"><img src="Open.png" width="64px" height="64px"></a>Boiling Basalt</p></td>
+<td><p><a target="_self" href="game-28.html"><img src="Open.png" width="64px" height="64px"></a>Grainy Getaway</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Koopa Shell</p></td>
 </tr>
 <tr>
