--- a/index.html
+++ b/index.html
@@ -49,15 +49,19 @@
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
-<li><a target="_self" href="7 Jump For The Stars Stamp.zip">Get A Stamp</a></li>
+<li><a target="_self" href="7 Jump For The Stars Stamp.zip">Get A Stazzy Stamp</a></li>
+<li><a target="_self" href="34 Ring Toss Stamp.zip">Get An Ostrinus Stamp</a></li>
+<li><a target="_self" href="35 Target Practice Stamp.zip">Get A Catsworth Stamp</a></li>
 <li><a target="_self" href="https://stazzy-station.pages.dev/">Home</a></li>
 </ul>
 <hr>
-<img src="7 Jump For The Stars TP.png" width="100%" height="100%">
+<button type="button" onclick="switchImg()">Switch Characters</button>
+<img src="7 Jump For The Stars TP.png" width="100%" height="100%" id="imgToSwitch">
 <script src="Background.js"></script>
 <script src="Time.js"></script>
 <script src="Search.js"></script>
 <script src="Random.js"></script>
+<script src="Switch.js"></script>
 </div>
 </body>
 </html>
