--- a/map-2.html
+++ b/map-2.html
@@ -31,7 +31,7 @@
 <tr>
 <td><p><a target="_self" href="game-27.html"><img src="Open.png" width="64px" height="64px"></a>Boiling Basalt</p></td>
 <td><p><a target="_self" href="game-28.html"><img src="Open.png" width="64px" height="64px"></a>Grainy Getaway</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Koopa Shell</p></td>
+<td><p><a target="_self" href="game-29.html"><img src="Open.png" width="64px" height="64px"></a>Marooned Marine</p></td>
 </tr>
 <tr>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Big Chill Bully</p></td>
