Chill Bully Is The Ball

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <li><a target="_self" href="game-27.html">Boiling Basalt---6/19/2025</a></li>
 <li><a target="_self" href="game-28.html">Grainy Getaway---6/20/2025</a></li>
 <li><a target="_self" href="game-29.html">Marooned Marine---6/24/2025</a></li>
+<li><a target="_self" href="game-30.html">Snow Sports---6/24/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
