--- a/map-2.html
+++ b/map-2.html
@@ -34,7 +34,7 @@
 <td><p><a target="_self" href="game-29.html"><img src="Open.png" width="64px" height="64px"></a>Marooned Marine</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Big Chill Bully</p></td>
+<td><p><a target="_self" href="game-30.html"><img src="Open.png" width="64px" height="64px"></a>Snow Sports</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Wiggler</p></td>
 <td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Bowser 2</p></td>
 </tr>
