--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 <li><a target="_self" href="game-28.html">Grainy Getaway---6/20/2025</a></li>
 <li><a target="_self" href="game-29.html">Marooned Marine---6/24/2025</a></li>
 <li><a target="_self" href="game-30.html">Snow Sports---6/24/2025</a></li>
+<li><a target="_self" href="game-31.html">Western Woods---6/25/2025</a></li>
+<li><a target="_self" href="game-32.html">Stazzy Square---6/25/2025</a></li>
+<li><a target="_self" href="game-33.html">Bumper 64 2---6/25/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
