--- a/map-2.html
+++ b/map-2.html
@@ -35,8 +35,8 @@
 </tr>
 <tr>
 <td><p><a target="_self" href="game-30.html"><img src="Open.png" width="64px" height="64px"></a>Snow Sports</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Wiggler</p></td>
-<td><p><a target="_self" href="#"><img src="Closed.png" width="64px" height="64px"></a>Bowser 2</p></td>
+<td><p><a target="_self" href="game-31.html"><img src="Open.png" width="64px" height="64px"></a>Western Woods</p></td>
+<td><p><a target="_self" href="game-32.html"><img src="Open.png" width="64px" height="64px"></a>Stazzy Square</p></td>
 </tr>
 </table>
 </div>
