My Original Vision Of Stazzy City

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <li><a target="_self" href="game-32.html">Stazzy Square---6/25/2025</a></li>
 <li><a target="_self" href="game-33.html">Bumper 64 2---6/25/2025</a></li>
 <li><a target="_self" href="game-34.html">Bumper 64 1 & 2 v1.1---6/28/2025</a></li>
+<li><a target="_self" href="game-35.html">Stazzy City Reborn---7/12/2025</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
