--- a/index.html
+++ b/index.html
@@ -11,48 +11,47 @@
 <div id="USA">
 <h1>Games</h1>
 <hr>
-<a target="_self" href="https://ko-fi.com/stazzy"><button type="button">Buy Me A Coffee!</button></a><a target="_self" href="https://patreon.com/StazzyStation"><button type="button">Become A Patron!</button></a>
 <p id="time"></p>
 <input type="text" id="bar" onkeyup="search()" placeholder="Search..."><button onclick="find(previousSibling.value)">Find</button><button href="#" onclick="randomSite();">Random</button>
 <ul>
 <li><a href="#bottom">Go To Bottom</a></li>
 </ul>
 <ol id="objects">
-<li><a target="_self" href="game-1.html">Stazzy City---12/31/2024</a></li>
-<li><a target="_self" href="game-2.html">Ancient Acropolis---1/3/2025</a></li>
-<li><a target="_self" href="game-3.html">Pancetta's Pizza---1/7/2025</a></li>
-<li><a target="_self" href="game-4.html">Fallow Fortress---1/14/2025</a></li>
-<li><a target="_self" href="game-5.html">Molten Mine---2/2/2025</a></li>
-<li><a target="_self" href="game-6.html">Arctic Abode---2/6/2025</a></li>
-<li><a target="_self" href="game-7.html">Wayward Workshop---2/8/2025</a></li>
-<li><a target="_self" href="game-8.html">Cubic Crisis---2/15/2025</a></li>
-<li><a target="_self" href="game-9.html">Peaceful Palace---2/20/2025</a></li>
-<li><a target="_self" href="game-10.html">Pacific Plant---2/23/2025</a></li>
-<li><a target="_self" href="game-11.html">Searing Sahara---2/24/2025</a></li>
-<li><a target="_self" href="game-12.html">Cathode Castle---2/24/2025</a></li>
-<li><a target="_self" href="game-13.html">This Is Not Deltarune---2/24/2025</a></li>
-<li><a target="_self" href="game-14.html">Hide & Seek---2/27/2025</a></li>
-<li><a target="_self" href="game-15.html">Scallywag Skyline---3/14/2025</a></li>
-<li><a target="_self" href="game-16.html">Bumper 64---3/14/2025</a></li>
-<li><a target="_self" href="game-17.html">Stazzy's Ikemen GO Build---4/16/2025</a></li>
-<li><a target="_self" href="game-18.html">Classic Castle---4/23/2025</a></li>
-<li><a target="_self" href="game-19.html">Clever Clock---4/26/2025</a></li>
-<li><a target="_self" href="game-20.html">Wild Wing Way---4/28/2025</a></li>
-<li><a target="_self" href="game-21.html">Rising Raceway---5/6/2025</a></li>
-<li><a target="_self" href="game-22.html">Vacant Villa---5/10/2025</a></li>
-<li><a target="_self" href="game-23.html">Cloud Carnival---5/11/2025</a></li>
-<li><a target="_self" href="game-24.html">Vanish Valley---5/21/2025</a></li>
-<li><a target="_self" href="game-25.html">Shivery Showdown---5/27/2025</a></li>
-<li><a target="_self" href="game-26.html">Metal Manor---6/2/2025</a></li>
-<li><a target="_self" href="game-27.html">Boiling Basalt---6/19/2025</a></li>
-<li><a target="_self" href="game-28.html">Grainy Getaway---6/20/2025</a></li>
-<li><a target="_self" href="game-29.html">Marooned Marine---6/24/2025</a></li>
-<li><a target="_self" href="game-30.html">Snow Sports---6/24/2025</a></li>
-<li><a target="_self" href="game-31.html">Western Woods---6/25/2025</a></li>
-<li><a target="_self" href="game-32.html">Stazzy Square---6/25/2025</a></li>
-<li><a target="_self" href="game-33.html">Bumper 64 2---6/25/2025</a></li>
-<li><a target="_self" href="game-34.html">Bumper 64 1 & 2 v1.1---6/28/2025</a></li>
-<li><a target="_self" href="game-35.html">Stazzy City Reborn---7/12/2025</a></li>
+<li><a target="_self" href="game-1.html">Stazzy City<small> (2024-12-31)</small></a></li>
+<li><a target="_self" href="game-2.html">Ancient Acropolis<small> (2025-01-03)</small></a></li>
+<li><a target="_self" href="game-3.html">Pancetta's Pizza<small> (2025-01-07)</small></a></li>
+<li><a target="_self" href="game-4.html">Fallow Fortress<small> (2025-01-14)</small></a></li>
+<li><a target="_self" href="game-5.html">Molten Mine<small> (2025-02-02)</small></a></li>
+<li><a target="_self" href="game-6.html">Arctic Abode<small> (2025-02-06)</small></a></li>
+<li><a target="_self" href="game-7.html">Wayward Workshop<small> (2025-02-08)</small></a></li>
+<li><a target="_self" href="game-8.html">Cubic Crisis<small> (2025-02-15)</small></a></li>
+<li><a target="_self" href="game-9.html">Peaceful Palace<small> (2025-02-20)</small></a></li>
+<li><a target="_self" href="game-10.html">Pacific Plant<small> (2025-02-23)</small></a></li>
+<li><a target="_self" href="game-11.html">Searing Sahara<small> (2025-02-24)</small></a></li>
+<li><a target="_self" href="game-12.html">Cathode Castle<small> (2025-02-24)</small></a></li>
+<li><a target="_self" href="game-13.html">This Is Not Deltarune<small> (2025-02-24)</small></a></li>
+<li><a target="_self" href="game-14.html">Hide & Seek<small> (2025-02-27)</small></a></li>
+<li><a target="_self" href="game-15.html">Scallywag Skyline<small> (2025-03-14)</small></a></li>
+<li><a target="_self" href="game-16.html">Bumper 64<small> (2025-03-14)</small></a></li>
+<li><a target="_self" href="game-17.html">Stazzy's Ikemen GO Build<small> (2025-04-16)</small></a></li>
+<li><a target="_self" href="game-18.html">Classic Castle<small> (2025-04-23)</small></a></li>
+<li><a target="_self" href="game-19.html">Clever Clock<small> (2025-04-26)</small></a></li>
+<li><a target="_self" href="game-20.html">Wild Wing Way<small> (2025-04-28)</small></a></li>
+<li><a target="_self" href="game-21.html">Rising Raceway<small> (2025-05-06)</small></a></li>
+<li><a target="_self" href="game-22.html">Vacant Villa<small> (2025-05-10)</small></a></li>
+<li><a target="_self" href="game-23.html">Cloud Carnival<small> (2025-05-11)</small></a></li>
+<li><a target="_self" href="game-24.html">Vanish Valley<small> (2025-05-21)</small></a></li>
+<li><a target="_self" href="game-25.html">Shivery Showdown<small> (2025-05-27)</small></a></li>
+<li><a target="_self" href="game-26.html">Metal Manor<small> (2025-06-02)</small></a></li>
+<li><a target="_self" href="game-27.html">Boiling Basalt<small> (2025-06-19)</small></a></li>
+<li><a target="_self" href="game-28.html">Grainy Getaway<small> (2025-06-20)</small></a></li>
+<li><a target="_self" href="game-29.html">Marooned Marine<small> (2025-06-24)</small></a></li>
+<li><a target="_self" href="game-30.html">Snow Sports<small> (2025-06-24)</small></a></li>
+<li><a target="_self" href="game-31.html">Western Woods<small> (2025-06-25)</small></a></li>
+<li><a target="_self" href="game-32.html">Stazzy Square<small> (2025-06-25)</small></a></li>
+<li><a target="_self" href="game-33.html">Bumper 64 2<small> (2025-06-25)</small></a></li>
+<li><a target="_self" href="game-34.html">Bumper 64 1 & 2 v1.1<small> (2025-06-28)</small></a></li>
+<li><a target="_self" href="game-35.html">Stazzy City Reborn<small> (2025-07-12)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
