--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <li><a target="_self" href="game-34.html">Bumper 64 1 & 2 v1.1<small> (2025-06-28)</small></a></li>
 <li><a target="_self" href="game-35.html">Stazzy City Reborn<small> (2025-07-12)</small></a></li>
 <li><a target="_self" href="game-36.html">Your House<small> (2025-07-24)</small></a></li>
+<li><a target="_self" href="game-37.html">Stazzy's Castle<small> (2025-07-29)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
