--- a/game-17.html
+++ b/game-17.html
@@ -12,11 +12,11 @@
 <h1>Stazzy's Ikemen GO Build</h1>
 <hr>
 <img src="S17.png" width="100%" height="100%">
-<p><a target="_self" href="https://mega.nz/file/PBljyYQR#iQlFGyiEVO2Vu1Di6Dw0nZ_uXo212luVTwf7xHXkrVo">Download Game (Windows)</a></p>
-<p><a target="_self" href="https://mega.nz/file/2NtRwaKB#H16FWwJkN7NQEaM5vU0C27WgkCbmoVEdTpi1Rlp_nOA">Download Game (Linux)</a></p>
+<p><a target="_self" href="https://mega.nz/file/PBljyYQR#iQlFGyiEVO2Vu1Di6Dw0nZ_uXo212luVTwf7xHXkrVo">Download Windows Edition</a></p>
+<p><a target="_self" href="https://mega.nz/file/2NtRwaKB#H16FWwJkN7NQEaM5vU0C27WgkCbmoVEdTpi1Rlp_nOA">Download Linux Edition</a></p>
 <hr>
-<p><a target="_blank" href="https://mega.nz/file/PBljyYQR#iQlFGyiEVO2Vu1Di6Dw0nZ_uXo212luVTwf7xHXkrVo">Open Game In New Tab (Windows)</a></p>
-<p><a target="_blank" href="https://mega.nz/file/2NtRwaKB#H16FWwJkN7NQEaM5vU0C27WgkCbmoVEdTpi1Rlp_nOA">Open Game In New Tab (Linux)</a></p>
+<p><a target="_blank" href="https://mega.nz/file/PBljyYQR#iQlFGyiEVO2Vu1Di6Dw0nZ_uXo212luVTwf7xHXkrVo">Open Windows Edition In New Tab</a></p>
+<p><a target="_blank" href="https://mega.nz/file/2NtRwaKB#H16FWwJkN7NQEaM5vU0C27WgkCbmoVEdTpi1Rlp_nOA">Open Linux Edition In New Tab</a></p>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
 <script src="Background.js"></script>
 </div>
