--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>Games</h1>
 <hr>
 <p id="time"></p>
-<input type="text" id="bar" onkeyup="search()" placeholder="Search..."><button onclick="find(previousSibling.value)">Find</button><button href="#" onclick="randomSite();">Random</button>
+<input type="text" id="bar" onkeyup="search()" placeholder="Search..."><button onclick="find(previousSibling.value)">Find</button><button href="#" onclick="randomSite()">Random</button>
 <ul>
 <li><a href="#bottom">Go To Bottom</a></li>
 </ul>
@@ -54,6 +54,7 @@
 <li><a target="_self" href="game-35.html">Stazzy City Reborn<small> (2025-07-12)</small></a></li>
 <li><a target="_self" href="game-36.html">Your House<small> (2025-07-24)</small></a></li>
 <li><a target="_self" href="game-37.html">Stazzy's Castle<small> (2025-07-29)</small></a></li>
+<li><a target="_self" href="game-38.html">House Demolition<small> (2025-08-23)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
