--- a/game-38.html
+++ b/game-38.html
@@ -12,9 +12,9 @@
 <h1>House Demolition</h1>
 <hr>
 <img src="S38.png" width="100%" height="100%">
-<p><a target="_self" href="House Demolition.mb64.zip">Download Game</a></p>
+<p><a target="_self" href="House Demolition.zip">Download Game</a></p>
 <hr>
-<p><a target="_blank" href="House Demolition.mb64.zip">Open Game In New Tab</a></p>
+<p><a target="_blank" href="House Demolition.zip">Open Game In New Tab</a></p>
 <p><a target="_self" href="index.html">Return To The Games Page</a></p>
 <script src="Background.js"></script>
 </div>
