An actual Minecraft level

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <li><a target="_self" href="game-36.html">Your House<small> (2025-07-24)</small></a></li>
 <li><a target="_self" href="game-37.html">Stazzy's Castle<small> (2025-07-29)</small></a></li>
 <li><a target="_self" href="game-38.html">House Demolition<small> (2025-08-23)</small></a></li>
+<li><a target="_self" href="game-39.html">Mariocraft 64<small> (2025-09-02)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
