Bob-ombs On The Beach

--- a/map-3.html
+++ b/map-3.html
@@ -15,7 +15,7 @@
 <table>
 <tr>
 <td><p><a target="_self" href="game-40.html"><img src="OpenStar.png" width="64px" height="64px"></a> Neo Stazzy City</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 2</p></td>
+<td><p><a target="_self" href="game-41.html"><img src="BossStar.png" width="64px" height="64px"></a> Bob-omb Beach</p></td>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 3</p></td>
 </tr>
 <tr>
