--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <li><a target="_self" href="game-38.html">House Demolition<small> (2025-08-23)</small></a></li>
 <li><a target="_self" href="game-39.html">Mariocraft 64<small> (2025-09-02)</small></a></li>
 <li><a target="_self" href="game-40.html">Neo Stazzy City<small> (2025-09-07)</small></a></li>
+<li><a target="_self" href="game-41.html">Bob-omb Beach<small> (2025-09-10)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
